:art: spring cloud kubernetes & remove eureka